Fix: Ensure consistent scrollbar appearance to prevent content shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@ This styling is used for components/DonationForm
 Not used for project cards
 */
 
+html {
+  overflow-y: scroll
+}
+
 button.small {
   @apply p-1 text-sm bg-white text-black border border-black;
 }
